<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trackFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/id_fragmenttrack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|center"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingTop="6dp">

        <TableLayout
            android:id="@+id/id_tableLayout_TrackName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp">

            <TextView
                android:id="@+id/id_textView_TrackName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryLight"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_textView_TrackIDLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="13sp" />
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <TableLayout
                android:id="@+id/id_tableLayout_Duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <TextView
                    android:id="@+id/id_textView_Duration"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/id_textView_DurationLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/duration"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13sp" />
            </TableLayout>

            <TableLayout
                android:id="@+id/id_tableLayout_Distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/id_textView_Distance"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:gravity="center_horizontal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/id_textView_DistanceUM"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:layout_weight="0" />
                </TableRow>

                <TextView
                    android:id="@+id/id_textView_DistanceLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/distance"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13sp" />
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <TableLayout
                android:id="@+id/id_tableLayout_SpeedMax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/id_textView_SpeedMax"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:gravity="center_horizontal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/id_textView_SpeedMaxUM"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:layout_weight="0" />
                </TableRow>

                <TextView
                    android:id="@+id/id_textView_SpeedMaxLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/max_speed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13sp" />
            </TableLayout>

            <TableLayout
                android:id="@+id/id_tableLayout_AltitudeGap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/id_textView_AltitudeGap"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:gravity="center_horizontal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/id_textView_AltitudeGapUM"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:layout_weight="0" />
                </TableRow>

                <TextView
                    android:id="@+id/id_textView_AltitudeGapLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/altitude_gap"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13sp" />
            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <TableLayout
                android:id="@+id/id_tableLayout_SpeedAvg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/id_textView_SpeedAvg"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:gravity="center_horizontal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/id_textView_SpeedAvgUM"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:layout_weight="0" />
                </TableRow>

                <TextView
                    android:id="@+id/id_textView_SpeedAvgLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/average_speed"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13sp" />
            </TableLayout>

            <TableLayout
                android:id="@+id/id_tableLayout_OverallDirection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:paddingBottom="3dp"
                android:paddingTop="3dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/id_textView_OverallDirection"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:freezesText="true"
                        android:gravity="center_horizontal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/id_textView_OverallDirectionUM"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:layout_weight="0" />
                </TableRow>

                <TextView
                    android:id="@+id/id_textView_OverallDirectionLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/overall_direction"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="13sp" />
            </TableLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>